<resources>
    <!-- Login and Create Account Activities -->
    <string name="app_name">Intergalactic Coffee</string>
    <string name="loginTitle_textView"><u>Intergalactic Coffee</u></string>
    <string name="username_editTextText">Username</string>
    <string name="password_editTextTextPassword">Password</string>
    <string name="login_button">Login</string>

    <string name="createAccount_button">Create Account</string>
    <string name="Logout_button">A</string>

    <string name="displayAccounts_textView"> </string>
    <string name="noUsers">There are no users</string>

    <string name="logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Planets Activity -->
    <string name="choosePlanets_textView">Choose Planet: </string>
    <string name="Planet_spinner"> Tantooine </string>
    <string name="bounty_textView">Choose Bounty: </string>

    <!-- Table Activity -->
    <string name="tableTitle_textView">Table</string>
    <!-- List Items Resource -->
    <string name="TableID_textView">Username:</string>
    <string name="TableUsernameFromDB_textView"> </string>

    <!-- Selected Planet Activity -->
    <string name="PlanetTitle_textView">Planet</string>
    <string name="PlanetDescription_textView">Description</string>
    <string name="CoffeeName1_textView">Coffee</string>
    <string name="CoffeeName2_textView">Coffee</string>
    <!-- Selected Planet Resource -->
    <string name="bountyHunt_button">Bounty Hunt?</string>

    <!-- Selected Bounty Activity-->
    <string name="BountyTitle_textView">Bounty</string>
    <string name="BountyDescription_textView">Description</string>
    <string name="UserResult_textView">10</string>
    <string name="EnemyRoll_textView">Enemy: </string>
    <string name="EnemyResult_textView">9</string>
    <string name="Boolean_textView">Success!</string>


    <!-- Shopping Cart Activity-->

    <!-- Shopping Cart Activity-->
    <string name="CartItem_textView">Coffee Item</string>
    <string name="CartCost_textView">$5</string>
</resources>