<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTitle_textView"
        android:layout_width="332dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/loginTitle_textView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_editTextText"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/username_editTextText"
        android:inputType="text"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle_textView" />

    <EditText
        android:id="@+id/password_editTextTextPassword"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password_editTextTextPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_editTextText" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="150dp"
        android:text="@string/login_button"
        android:fontFamily="monospace"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editTextTextPassword" />

    <Button
        android:id="@+id/createAccount_button"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:backgroundTint="@color/black"
        android:text="@string/createAccount_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>