<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".planetsActivity">

    <TextView
        android:id="@+id/choosePlanet_textView"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_marginTop="150dp"
        android:fontFamily="monospace"
        android:text="@string/choosePlanets_textView"
        android:textSize="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Logout_button"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:text="@string/Logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Cart_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/black"
        android:text="Cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/Planet_spinner"
        android:layout_width="237dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosePlanet_textView"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/bounty_textView"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_marginTop="100dp"
        android:text="@string/bounty_textView"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Planet_spinner" />

    <Spinner
        android:id="@+id/bounty_spinner"
        android:layout_width="237dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        app:flow_verticalBias="0.043"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bounty_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>